--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
 
       # Installer le SDK Dart version 3.5.4
-      - name: Setup Dart
+      - name: Set up Dart
         uses: dart-lang/setup-dart@v1
         with:
           sdk: '3.5.4'
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.3.10' # Vous pouvez spécifier la version de Flutter que vous utilisez
+          flutter-version: '3.3.10' # Spécifiez la version de Flutter que vous utilisez
 
       - name: Install dependencies
         run: flutter pub get
