--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -15,17 +15,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Installer le SDK Dart version 3.5.4
-      - name: Set up Dart
-        uses: dart-lang/setup-dart@v1
-        with:
-          sdk: '3.5.4'
-
-      # Ajouter l'étape pour installer Flutter
-      - name: Set up Flutter
+      # Installer Flutter, qui inclut Dart
+      - name: Install Flutter SDK
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.3.10'
+          flutter-version: '3.5.0' # Assurez-vous d'utiliser la version compatible de Flutter
 
       - name: Install dependencies
         run: flutter pub get
