--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -15,11 +15,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Installer Flutter SDK, qui inclut Dart
+      # Setup Flutter, specifying a version
       - name: Install Flutter SDK
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.5.0'
+          flutter-version: '3.3.10' # Specify a specific stable version
 
       - name: Install dependencies
         run: flutter pub get
